# iphone-screenshooter

./: .gitignore  README.md  download_with_configurator.sh  download_with_imazing.sh  extract_from_iphone.sh  extract_with_appium.js  find_team_id.sh  install_from_mac.sh  open_appstore.sh  package-lock.json  package.json  pyproject.toml  run_ios_simulator.sh  run_maestro_screenshots.sh  screenshot.py  screenshot_flow.yaml
flows/: chrome_navigation.yaml  galxe_navigation.yaml
ios_app_explorer/: __init__.py  config.py  driver.py  element_utils.py  logger.py  main.py  navigation.py  screenshot.py  scroll_utils.py
